# sim_ros2

src/sauvc_sim/: CMakeLists.txt  package.xml
src/sauvc_sim/launch/: visualize.launch.py
src/sauvc_sim/scripts/: auto_pilot.py  thruster_manager.py
src/sauvc_sim/urdf/: auv_base.xacro
src/sauvc_sim/worlds/: underwater.sdf
